# local-gemini-code-review

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  review.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  evals.yml
code_review/: __init__.py  chunking.py  cli.py  config.py  errors.py  panel.py  parser.py  prompts.py  providers.py  sources.py
commands/: codebase-review.toml
docs/: architecture.md  contributing.md  llm-code-review-runbook.md
docs/schema/: review-envelope.schema.json
evals/: run.py
evals/fixtures/clean-refactor/: diff.patch  expected.toml
evals/fixtures/leaked-file-handle/: diff.patch  expected.toml
evals/fixtures/off-by-one/: diff.patch  expected.toml
evals/fixtures/swallowed-exception/: diff.patch  expected.toml
skills/code-review-codebase/: SKILL.md
tests/: test_biginput.py  test_config.py  test_evals_score.py  test_evidence.py  test_panel.py  test_parser.py  test_review.py  test_schema.py  test_wire.py
tests/fixtures/: dogfood-claude.md  dogfood-deepseek.md  dogfood-pro.md
