[project]
name = "local-gemini-code-review"
version = "0.1.0"
description = "Multi-provider code review runner (OpenRouter, Gemini API, local Ollama) using the Gemini CLI code-review extension prompts."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# review.py lives at the repo root (single-file runner, not a package);
# put the root on sys.path so tests can `import review`.
pythonpath = ["."]
testpaths = ["tests"]
