[project]
name = "local-gemini-code-review"
version = "0.2.0"
description = "Multi-provider code review runner (OpenRouter, Gemini API, local Ollama) using the Gemini CLI code-review extension prompts."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
code-review = "code_review.cli:_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_review"]

# skills/ and commands/ stay at the repo root, byte-identical to
# upstream (required for upstream merges and the gemini-extension use
# case); the wheel gets copies inside the package so an installed
# `code-review` finds them via importlib.resources.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "code_review/skills"
"commands" = "code_review/commands"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "jsonschema>=4",  # pins docs/schema/review-envelope.schema.json to the builders
    "types-jsonschema>=4",  # mypy stubs for the above
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
# Defaults (pyflakes + pycodestyle errors) plus import hygiene. The
# heavily-commented style means long prose comments are fine; E501 is
# enforced only on code lines via the formatter's line-length.
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
files = ["code_review", "tests", "evals"]
